edit symmetric.js file

--- a/symmetric.html
+++ b/symmetric.html
@@ -184,7 +184,29 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <!-- ...contenu du footer... -->
+                <div class="footer-section">
+                    <h3>Crypt-Decrypt</h3>
+                    <p>Un projet éducatif pour explorer les différentes techniques de cryptographie.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Navigation</h3>
+                    <ul>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="classic.html">Chiffrement classique</a></li>
+                        <li><a href="symmetric.html">Cryptographie symétrique</a></li>
+                        <li><a href="asymmetric.html">Cryptographie asymétrique</a></li>
+                        <li><a href="hash.html">Hachage et signature</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact</h3>
+                    <p><i class="fas fa-envelope"></i> contact@cryptdecrypt.example</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Crypt-Decrypt. Tous droits réservés.</p>
