edit asymmetric.html file

--- a/asymmetric.html
+++ b/asymmetric.html
@@ -18,10 +18,10 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="index.html"><i class="fas fa-home"></i> Accueil</a></li>
-                    <li class="nav-item"><a href="classic.html"><i class="fas fa-history"></i> Chiffrement classique</a></li>
-                    <li class="nav-item"><a href="symmetric.html"><i class="fas fa-key"></i> Cryptographie symétrique</a></li>
-                    <li class="nav-item active"><a href="asymmetric.html"><i class="fas fa-key"></i><i class="fas fa-key"></i> Cryptographie asymétrique</a></li>
-                    <li class="nav-item"><a href="hash.html"><i class="fas fa-hashtag"></i> Hachage et signature</a></li>
+                    <li class="nav-item"><a href="classic.html"><i class="fas fa-history"></i> Classique</a></li>
+                    <li class="nav-item"><a href="symmetric.html"><i class="fas fa-key"></i> Symétrique</a></li>
+                    <li class="nav-item active"><a href="asymmetric.html"><i class="fas fa-key"></i><i class="fas fa-key"></i> Asymétrique</a></li>
+                    <li class="nav-item"><a href="hash.html"><i class="fas fa-hashtag"></i> Hachage</a></li>
                 </ul>
                 <button class="nav-toggle" aria-label="Toggle menu">
                     <i class="fas fa-bars"></i>
