add ferquency analysis methodes

--- a/classic.html
+++ b/classic.html
@@ -20,6 +20,7 @@
                     <li class="nav-item"><a href="symmetric.html"><i class="fas fa-key"></i> Symétrique</a></li>
                     <li class="nav-item"><a href="asymmetric.html"><i class="fas fa-key"></i><i class="fas fa-key"></i> Asymétrique</a></li>
                     <li class="nav-item"><a href="hash.html"><i class="fas fa-hashtag"></i> Hachage</a></li>
+                    <li class="nav-item"><a href="freq_analys.html"><i class="fas fa-chart-bar"></i> Analyse de fréquence</a></li>
                 </ul>
                 <button class="nav-toggle" aria-label="Toggle menu">
                     <i class="fas fa-bars"></i>
@@ -195,6 +196,7 @@
                         <li><a href="symmetric.html">Cryptographie symétrique</a></li>
                         <li><a href="asymmetric.html">Cryptographie asymétrique</a></li>
                         <li><a href="hash.html">Hachage et signature</a></li>
+                        <li><a href="freq_analys.html">Analyse de fréquence</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
