--- a/symmetric.html
+++ b/symmetric.html
@@ -22,6 +22,7 @@
                     <li class="nav-item active"><a href="symmetric.html"><i class="fas fa-key"></i> Symétrique</a></li>
                     <li class="nav-item"><a href="asymmetric.html"><i class="fas fa-key"></i><i class="fas fa-key"></i> Asymétrique</a></li>
                     <li class="nav-item"><a href="hash.html"><i class="fas fa-hashtag"></i> Hachage</a></li>
+                    <li class="nav-item"><a href="freq_analys.html"><i class="fas fa-chart-bar"></i> Analyse de fréquence</a></li>
                 </ul>
                 <button class="nav-toggle" aria-label="Toggle menu">
                     <i class="fas fa-bars"></i>
