add card -analyse frequentielle-

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
                         <p>Méthodes utilisant des paires de clés publiques/privées comme RSA.</p>
                         <a href="asymmetric.html" class="btn btn-outline">Explorer</a>
                     </div>
+
+                    <div class="feature-card">
+                        <div class="feature-icon">
+                            <i class="fas fa-chart-bar"></i>
+                        </div>
+                        <h3>Analyse de fréquence</h3>
+                        <p>Calculez la fréquence des lettres, l’Index of Coincidence et l’examen de Kasiski.</p>
+                        <a href="freq_analys.html" class="btn btn-outline">Explorer</a>
+                    </div>
+                    
                     <div class="feature-card">
                         <div class="feature-icon">
                             <i class="fas fa-hashtag"></i>
