--- a/classic.html
+++ b/classic.html
@@ -181,12 +181,16 @@
         </section>
     </main>
 
-    <footer class="footer">
+        <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Crypt-Decrypt</h3>
-                    <p>Un projet éducatif pour explorer les différentes techniques de cryptographie.</p>
+                    <p>
+                        Crypt-Decrypt est une plateforme éducative dédiée à la découverte et à la compréhension des
+                        différentes techniques de cryptographie : du chiffrement classique aux méthodes modernes de
+                        cryptographie symétrique, asymétrique et de hachage.
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h3>Navigation</h3>
@@ -195,25 +199,22 @@
                         <li><a href="classic.html">Chiffrement classique</a></li>
                         <li><a href="symmetric.html">Cryptographie symétrique</a></li>
                         <li><a href="asymmetric.html">Cryptographie asymétrique</a></li>
-                        <li><a href="hash.html">Hachage et signature</a></li>
+                        <li><a href="hash.html">Hachage & Signature</a></li>
                         <li><a href="freq_analys.html">Analyse de fréquence</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact</h3>
-                    <p><i class="fas fa-envelope"></i> contact@cryptdecrypt.example</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
+                    <h3>Contact & Collaboration</h3>
+                    <p><i class="fas fa-envelope"></i> nourislamaoudia04@gmail.com</p>
+                    <p><a href="https://islamaoudia.me/" target="_blank"><i class="fas fa-briefcase"></i> Mon portfolio</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Crypt-Decrypt. Tous droits réservés.</p>
+                <p>&copy; 2025 Crypt-Decrypt. Tous droits réservés. | Développé par <strong>Nour Islam AOUDIA</strong></p>
             </div>
         </div>
     </footer>
+
     <script src="js/main.js"></script>
     <script src="js/classic.js"></script>
 </body>
